--- a/app/src/main/res/layout/layout_health_manage.xml
+++ b/app/src/main/res/layout/layout_health_manage.xml
@@ -118,11 +118,19 @@
         android:layout_marginLeft="@dimen/dimen_16px"
         android:layout_marginRight="@dimen/dimen_16px"/>
 
+    <com.app.aihealthapp.view.MyGridView
+        android:id="@+id/grid_health_manage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/dimen_10px"
+        android:numColumns="5"
+        android:scrollbars="none"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="@dimen/dimen_10px">
+        android:padding="@dimen/dimen_10px"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="0dp"
